crates/zeo-tests/tests/snapshots/diagnostics__a_class_body_directive_names_its_own_line.snap
---
source: crates/zeo-tests/tests/diagnostics.rs
expression: render(err)
---
zeo::lower

  × ffi_lib expects a library name zeo can decide at compile time: a string, a symbol, or `FFI::Library::LIBC` -- alone, or as one alternative of an array
   ╭─[-e:4:3]
 3 │   extend FFI::Library
 4 │   ffi_lib whatever
   ·   ────────┬───────
   ·           ╰── zeo stops here
 5 │ end
   ╰────
  help: zeo can't compile this yet
