crates/zeo-tests/tests/snapshots/diagnostics__a_parse_failure_renders_without_an_excerpt.snap
---
source: crates/zeo-tests/tests/diagnostics.rs
expression: render(err)
---
zeo::lower::syntax

  × parse error: unexpected end-of-input; expected a `)` to close the parameters
  help: this source is not valid Ruby -- `ruby -c` rejects it too
