crates/zeo-tests/tests/snapshots/diagnostics__an_analyze_error_is_coded_with_its_stage.snap
---
source: crates/zeo-tests/tests/diagnostics.rs
expression: render(err)
---
zeo::analyze

  × subclassing the built-in type `Ractor` isn't supported yet (zeo limitation, no generated Rust struct exists for it)
   ╭─[-e:1:1]
 1 │ ╭─▶ class Job < Ractor
 2 │ ├─▶ end
   · ╰──── rejected here
   ╰────
