crates/zeo-tests/tests/snapshots/diagnostics__an_unsupported_codegen_construct_is_an_error_not_a_panic.snap
---
source: crates/zeo-tests/tests/diagnostics.rs
expression: render(err)
---
zeo::codegen

  × safe-navigation on a class-method call isn't supported yet (zeo limitation)
