crates/zeo-tests/tests/snapshots/diagnostics__an_unsupported_construct_is_an_error_not_a_panic.snap
---
source: crates/zeo-tests/tests/diagnostics.rs
expression: render(err)
---
zeo::codegen

  × the CLIF backend cannot lower a splat at a refined call yet (-e:8)
