crates/zeo-tests/tests/snapshots/diagnostics__an_unsupported_construct_renders_a_located_excerpt.snap
---
source: crates/zeo/tests/diagnostics.rs
expression: render(err)
---
zeo::lower::unsupported

  × a Regexp literal forcing a non-UTF-8 encoding (`/e`/`/s`) isn't supported yet (zeo limitation, UTF-8-only)
   ╭─[-e:2:3]
 1 │ x = 1
 2 │ p(/foo/e)
   ·   ───┬──
   ·      ╰── not lowered yet
   ╰────
  help: valid Ruby that zeo does not compile yet (NotImplementedError territory, not a SyntaxError)
